--- a/style.css
+++ b/style.css
@@ -6,23 +6,31 @@ body {
 
 .menu {
     list-style: none;
-    position: absolute;
+    position: fixed;
     top: 10px;
     right: 30px;
     z-index: 10;
     cursor: pointer;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
+}
+
 .links {
     float: left;
-    color: crimson;
-    font-family: monospace;
+    color:rosybrown;
+        font-family: monospace;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 8px;
     padding-right: 8px;
     font-size: 20px;
-0
+
 }
 
 .links:hover {
@@ -64,7 +72,8 @@ h2 {
     font-size: 30px;
     font-weight: 300;
     line-height: 1.2;
-    font-family: monospace;
+    font-family: Langar;
+    color:forestgreen;
 }
 
 h1 {
@@ -73,7 +82,7 @@ h1 {
     line-height: 3.3;
     font-family: inherit;
     margin: auto;
-    color: color: darkmagenta;
+    color: darkmagenta;
 }
 
 .line {
@@ -94,14 +103,88 @@ p {
 }
 
 #name {
-    font-size: 30px;
+    font-size: 34px;
     line-height: 1.2;
-    font-family:Dancing Script;
-
+    font-family: Dancing Script;
+color:gold;
 }
 
 #b {
     padding: 50px;
     text-align: center;
-    background-color: darkorange;
+
+}
+
+h3 {
+    font-size: 40px;
+    color: fuchsia;
+    font-style: oblique;
+    font-weight: 300px;
+}
+
+#i {
+    color: brown;
+    font-family: inherit;
+    font-size: 30px;
+    border-width: 5px;
+    border-style: dashed;
+    border-radius: 100px;
+    background-color: sandybrown;
+    border-color: royalblue;
+}
+
+#c {
+    font-family: inherit;
+    font-size: 30px;
+    color: palegreen;
+    border-width: 5px;
+    border-style: dashed;
+    background-color: hotpink;
+    border-radius: 100px;
+    border-color: navy;
+}
+
+#f {
+    font-family: inherit;
+    font-size: 30px;
+    color: lightcoral;
+    background-color: yellow;
+    border-width: 5px;
+    border-color: darkturquoise;
+    border-style: dashed;
+    font-size: 30px;
+    border-radius: 100px;
+}
+
+#v {
+    font-family: inherit;
+    font-size: 30px;
+    font-size: 30px;
+    border-style: dashed;
+    border-width: 5px;
+    border-color: peru;
+    background-color: forestgreen;
+    border-radius: 100px;
+    color: tomato;
+}
+#pp{
+    color:blueviolet;
+   font-size: 40px;
+    font-style:italic;
+    
+}
+#ppp{
+ font-size: 40px;
+    font-style:italic;
+    color:orangered;
+}
+#ab{
+    color:darkgoldenrod;
+    font-size:40px;
+    font-family:cursive;
+}
+#pppp{
+   font-size:40px;
+    color:orchid;
+    font-style:normal;
 }
