--- a/style.css
+++ b/style.css
@@ -4,6 +4,20 @@ body {
     text-align: center;
     background-color:turquoise;
 }
+#mycarousel{
+    background-color:red;
+}
+#mycarousel img{
+    height:300px;
+    margin-top:30px;
+    
+}
+.carousel-inner p{
+    margin-bottom:15px;
+    margin-top:15px;
+    color:white;
+    font-size:20px;
+}
 
 
 .menu {
